--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body>
-    <h1>Welcome to Homepage</h1>
+    <h1>Welcome to Homepage its owais x qazi</h1>
     <a href="./pages/shoes.html">Shoes</a><br>
     <a href="./pages/shirts.html">Shirts</a><br>
     <a href="./pages/cloths.html">Cloths</a><br>
